--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -46,4 +49,10 @@ dependencies {
     //viewModel
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    //LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.0"
+
+    //coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
 }
